# ai-finance-manager

./: .cursorignore  .cursorindexingignore  .env.example  .gitignore  AGENTS.md  CURSOR_SETUP.md  LICENSE  Makefile  README.md
.cursor/: mcp.example.json
.cursor/commands/: commit-message.md  plan.md  review.md  verify.md
.cursor/context/: architecture.md  commands.md  project.md
.cursor/prompts/: 01-bootstrap-repository.md  02-implement-feature.md  03-fix-bug.md  04-review-change.md  05-plan-microservice.md  06-optimize-context.md
.cursor/rules/: 00-core.mdc  01-security-finance.mdc  10-java-spring.mdc  11-go.mdc  12-python-fastapi.mdc  13-typescript-next.mdc  14-sql-database.mdc  15-api-events.mdc  16-terraform-aws.mdc  17-testing.mdc  18-docs.mdc  19-git-workflow.mdc
.github/workflows/: ci.yml  k6.yml
apps/web/: README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
apps/web/src/app/: page.tsx  (+3 more)
docs/: README.md
docs/adr/: 0001-finmate-mvp-boundaries.md  0001-initial-deployable-boundaries.md  0002-website-single-api.md  0003-controlled-microservices.md  0004-full-services-naming.md
docs/architecture/: ai-providers.md  overview.md  ui.md
docs/plans/: 2026-07-21-redis-k6-github-actions.md
infra/: README.md  docker-compose.yml
infra/terraform/: README.md
k6/: README.md  smoke.js
scripts/: validate_contracts.py
services/: README.md
services/ai-insight/: README.md  pyproject.toml
services/ai-insight/src/ai_insight/: __init__.py  main.py
services/ai-insight/tests/: test_health.py
services/ai-service/: README.md  pyproject.toml
services/ai-service/src/ai/: __init__.py  main.py  settings.py
services/ai-service/src/ai/providers/: __init__.py  groq.py  rules.py
services/ai-service/tests/: test_groq_provider.py  test_health.py
services/analytics-service/: README.md  go.mod  go.sum
services/budget-service/: README.md  go.mod  go.sum
services/finance-core/: README.md  pom.xml
services/gateway/: README.md  go.mod  main.go  main_test.go
services/gateway-service/: README.md  pyproject.toml
services/gateway-service/src/gateway/: __init__.py  main.py  middleware.py  settings.py
services/gateway-service/src/gateway/auth/: __init__.py
services/gateway-service/src/gateway/clients/: __init__.py
services/gateway-service/src/gateway/routes/: __init__.py
services/gateway-service/tests/: test_clients.py  test_cognito_auth.py  test_health.py
services/identity-service/: README.md  pom.xml
services/notification-service/: README.md  go.mod  go.sum
services/transaction-service/: README.md  pom.xml
(+126 files in other folders)
